# tinyTodo

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
_bmad-output/brainstorming/: brainstorming-session-2026-03-04-110000.md
_bmad-output/planning-artifacts/: architecture.md  prd.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  shortcuts.rs  tasks.rs  tray.rs  window.rs
src/lib/components/: HistoryView.svelte  PeekWindow.svelte  SettingsView.svelte  TaskInput.svelte  TaskRow.svelte
src/lib/stores/: configStore.ts  taskStore.ts  themeStore.ts  updaterStore.ts
src/lib/types/: index.ts
src/themes/: floating-card.css  glass.css  high-contrast.css  macos-native.css  ultra-minimal.css  warm.css
